<resources>
    <string name="app_name">Parkaround</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_the_settings_fragment">This is the settings fragment</string>
    <string name="this_is_activity_fragment">This is activity fragment</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="note">Please do not include the country code(+91)</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_place_text">Please add the location where you want to provide the parking space. This location will be reflected in the Map.</string>
    <string name="add_location">Add location</string>
    <string name="use_my_current_location">&#160; Use my location</string>
    <string name="or">or</string>
    <string name="enter_the_address">Add location</string>
    <string name="road_name">Road name, Area, Colony</string>
    <string name="house">House no, Building name</string>
    <string name="pincode">Pincode</string>
    <string name="current_support_demo">Currently we only support locations from selected cities</string>
    <string name="current_support">Please make sure you are currently at the parking location</string>
    <string name="check_fuel_prices">Check fuel prices</string>
    <string name="check_traffic_rules">Check traffic rules</string>
    <string name="set_remianders">Set up remianders</string>
    <string name="emission_control">Emission control</string>
    <string name="available_parking">Available parking</string>
    <string name="fetching_status">Fetching status…</string>
    <string name="fetching_address">Fetching address…</string>
    <string name="settings">Settings</string>
    <string name="host_land">Host land</string>
    <string name="enter_car_number">Enter vehicle number</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="enter_vehicle_model">Enter vehicle model</string>
    <string name="book_location">book Location</string>
    <string name="near_to_shop_complex_landmark">Near to shop/complex/landmark</string>
    <string name="pricing_info">max   ₹99/hour \nmin   ₹10/hour</string>
    <string name="price">Price/Hour</string>
    <string name="set_timings">Select Timings</string>
    <string name="services_new">Services</string>
    <string name="new_booking">New booking</string>
    <string name="go_to_booking">Confirm booking</string>
    <string name="fuel_service">Get the realtime updates of fuel prices, compare prices based on cities</string>
    <string name="traffic_service">Get all the latest traffic rules and regulations at your fingertips</string>
    <string name="rem_service">Set up remainders for paying bills, renewing insurance and many more</string>
    <string name="emission_service">Check and navigate to nearby emission testing centers in your city</string>
    <string name="set_default_map_style">Set default map style</string>
    <string name="maps">Maps</string>
    <string name="land_owner">Land owner</string>
    <string name="edit_address">Edit address</string>
    <string name="delete_address">Delete address</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="services">Services</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="rent_parking_spot">Rent parking spot</string>
    <string name="open_scanner">open scanner</string>
    <string name="current_booking_will_appear_here">You dont have any booking right now</string>
    <string name="show_qr_code">Show Qr-code</string>
    <string name="sanner_info">Please scan the Qr-code from the parking providers device</string>
    <string name="total_hours">0\nHours</string>
    <string name="total_bookings">0\nBookings</string>
    <string name="total_earned">0\nEarned</string>
    <string name="add_remainder">Add remainder</string>
    <string name="add_remainders">Add Remainder</string>
</resources>