<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/maps"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/map_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/set_default_map_style"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/land_owner"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/edit_address"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/delete_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:shadowColor="@color/purple_700"
        android:text="@string/delete_address"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

</LinearLayout>