<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frag_add_land">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--this is ask for land details card-->

        <LinearLayout
            android:id="@+id/add_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_login_parking_test1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/add_place_text"
                android:textSize="21sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/add_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="200dp"
                android:clickable="true"
                app:cardCornerRadius="15dp"
                app:cardElevation="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/teal_200"
                    android:gravity="center"
                    android:text="@string/add_location"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <!--this is enter location details card-->

        <androidx.cardview.widget.CardView
            android:id="@+id/enter_location_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--this is for entering the details-->

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/custom_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/near_to"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="@string/near_to_shop_complex_landmark"
                        android:maxLength="40"
                        android:textColorHint="#8E8D8D"
                        android:textSize="18sp"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/enter_details_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/custom_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/house_or_building"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/house"
                            android:maxLength="30"
                            android:textColorHint="#8E8D8D"
                            android:textSize="18sp"
                            tools:ignore="Autofill" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/custom_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/road_colony_area"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/road_name"
                            android:maxLength="40"
                            android:textColorHint="#8E8D8D"
                            android:textSize="18sp"
                            tools:ignore="Autofill" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--pincode and spinner into horizontal linear layout -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/custom_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            app:boxCornerRadiusBottomEnd="15dp"
                            app:boxCornerRadiusBottomStart="15dp"
                            app:boxCornerRadiusTopEnd="15dp"
                            app:boxCornerRadiusTopStart="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/pincode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:hint="@string/pincode"
                                android:inputType="number"
                                android:maxLength="6"
                                android:textColorHint="#8E8D8D"
                                android:textSize="18sp"
                                tools:ignore="Autofill" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/custom_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            app:boxCornerRadiusBottomEnd="15dp"
                            app:boxCornerRadiusBottomStart="15dp"
                            app:boxCornerRadiusTopEnd="15dp"
                            app:boxCornerRadiusTopStart="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:hint="@string/price"
                                android:inputType="number"
                                android:maxLength="2"
                                android:textColorHint="#8E8D8D"
                                android:textSize="18sp"
                                tools:ignore="Autofill" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/pricing_info"
                            android:textSize="18sp"
                            android:textStyle="italic" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/current_support"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/add_address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/teal_200"
                            android:gravity="center"
                            android:text="@string/enter_the_address"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>