<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".booking">

    <LinearLayout
        android:id="@+id/change_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:id="@+id/original_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/anim_booking_test1"
                app:lottie_speed="0.5" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:drawablePadding="10dp"
                android:gravity="start"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/activities_icon" />

            <TextView
                android:id="@+id/pricing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="10dp"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_price_34" />

            <androidx.cardview.widget.CardView
                android:id="@+id/set_time"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:backgroundTint="#97FAF0"
                android:clickable="true"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/display_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/set_timings"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="end"
                android:text="@string/book_location"
                android:textColor="#FF4444"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ng.max.slideview.SlideView
                android:id="@+id/swipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                app:sv_animateSlideText="true"
                app:sv_buttonBackgroundColor="@color/white"
                app:sv_buttonImage="@drawable/ic_double_arrow_24"
                app:sv_reverseSlide="false"
                app:sv_slideBackgroundColor="#EF6767"
                app:sv_slideText="Swipe to book location"
                app:sv_slideTextColor="@color/white"
                app:sv_slideTextSize="16sp"
                app:sv_strokeColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>